[project]
name = "laenk-interview"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paul wanjohi", email = "paulwvnjohi@gmail.com" }
]
dependencies = [
    "psycopg2-binary>=2.9.11",
    "dj-database-url>=3.0.1",
    "faker>=37.12.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/laenk_interview"]
